--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,14 @@
 body, html {
   height: 100%;
 }
+
+#cover{
+width: 100%;
+background-color: #ddd url('edificio-blanco.jpg');
+text-align: center;
+display: flex;
+}
+
+#display-2{
+  color: red;
+}
