--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,16 @@ body, html {
   height: 100%;
 }
 
-
 .cover{
   height: 100%;
-  background: #ddd url('img/edificio.jpg') center center no-repeat;
+  background: #ddd url('../img/edificio1.jpg') center center no-repeat;
   background-size: cover;
   color: white;
   text-align: center;
   display: flex;
   align-items: center;
 }
+
 .cover-caption{
   width: 100%;
 }
